--- a/Advanture_Booking/style.css
+++ b/Advanture_Booking/style.css
@@ -9,16 +9,15 @@ header {
     position: fixed;
     left: 0;
     top: 0;
-    width: 96%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 30px;
+    padding: 18px 30px;
     font-weight: 600;
     font-size: 20px;
     color: whitesmoke;
     background: rgba(255, 255, 255, 0.1);
-    background-color: rgba(33, 104, 185, 0.959);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     z-index: 100;
@@ -28,7 +27,11 @@ header {
 #options{
     display: flex;
     gap: 70px;
+    flex-wrap: wrap;
+    padding-right: 35px;
 }
+
+
 *{
     margin: 0;padding: 0;
 }
@@ -78,7 +81,7 @@ header {
     align-items: center;
     text-align: center;
 }
-.learn_btn{
+.btn{
     width: 120px;
     height: auto;
     color: white;
@@ -109,7 +112,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 200px;
+    gap: 60px;
     padding-top: 50px;;
 }
 .event{
@@ -117,7 +120,8 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 20px;
+    text-align: center;
+    flex-wrap: wrap;
 }
 .event img{
     width: 341px;
