--- a/Spotify/style.css
+++ b/Spotify/style.css
@@ -1,7 +1,21 @@
-.left{
+*{
+    margin: 0;
+    padding: 0;
+}.left{
     width: 25vw;
+    padding: 10px;
 }
 
 .right{
     width: 75vw;
+}
+/* .home{
+    
+} */
+.home ul li{
+    display: flex;
+    width: 15px;
+    gap: 15px;
+    list-style: none;
+    padding-top: 14px;
 }
