--- a/Spotify/utility.css
+++ b/Spotify/utility.css
@@ -20,4 +20,26 @@
     align-items: center;
 }
 
+.bg-black{
+    background-color: black;
+    color: white;
+}
 
+.bg-grey{
+    background-color: #212121;
+}
+
+.invert{
+    filter: invert(1);
+}
+.rounded {
+    border-radius: 7px;
+}
+
+.m-1{
+    margin: 5px;
+}
+
+.p-1{
+    padding: 10px;
+}
