--- a/Spotify/style.css
+++ b/Spotify/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');
 *{
     margin: 0;
@@ -43,4 +44,43 @@
     font-size: 10px;
     align-items: center;
     color: grey;
+}
+.right{
+    margin: 15px 0px;
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(38, 38, 38);
+    
+}
+.header > *{
+    padding: 20px;
+
+}
+.spotify_playlist{
+    padding: 16px;
+    padding-left: 25px;
+    
+}
+.spotify_playlist h1{
+    font-size: 25px;
+    font-weight: bold;
+    font-family: "Roboto", sans-serif;
+}
+
+.spotify_playlist .card{
+    width: 200px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #252525;
+}
+
+
+.card > *{
+    padding-top: 10px;
+}
+.card img{
+    width: 100%;
+    object-fit: contain;
 }
